Usuniete pole 'comments' z InventoryEntry; naprawione testy - wszystkie przechodzą

--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  id: 1
   year: 1
-  type: 
+  journal_type: one
 
 two:
-  id: 1
   year: 1
-  type: 
+  journal_type: two
