--- a/test/fixtures/journal_types.yml
+++ b/test/fixtures/journal_types.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  name: Finansowa
 
 two:
-  name: MyString
+  name: Bankowa
