Fixed tests to work with authentication.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,13 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+admin:
+  email: andrzej.stencel+ziher2-c64@gmail.com
+  encrypted_password: $2a$10$nqte3zSljboVWtQOmtLmWexZIyG2oRQTbmZJzFhm/UNecrJ5p5J3m
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
+user1:
+  #email: andrzej.stencel+user-at-ziher.c64@gmail.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
