Poprawka testow i kontrolera do entry (zapisuje teraz entry i itemy)

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -3,7 +3,11 @@
 one:
   amount: 9.99
   amount_one_percent: 9.99
+  entry: one
+  category: one
 
 two:
   amount: 9.99
   amount_one_percent: 9.99
+  entry: one
+  category: two
