--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  name: CategoryOne
   isExpense: false
 
 two:
-  name: MyString
+  name: CategoryTwo
   isExpense: false
