--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -2,10 +2,10 @@
 
 one:
   date: 2012-03-24
-  name: MyString
+  name: EntryOne
   document_number: MyString
 
 two:
   date: 2012-03-24
-  name: MyString
+  name: EntryTwo
   document_number: MyString
