[Fixes #40068025] Wyswietlanie wpisow z konkretnej ksiazki

--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -4,8 +4,10 @@ one:
   date: 2012-03-24
   name: EntryOne
   document_number: MyString
+  journal: one
 
 two:
   date: 2012-03-24
   name: EntryTwo
   document_number: MyString
+  journal: one
