Wyświetlanie na wejściu strony z domyślną książką na bieżący rok

--- a/test/fixtures/journal_types.yml
+++ b/test/fixtures/journal_types.yml
@@ -1,7 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
+finance:
   name: Finansowa
+  is_default: true
 
-two:
+bank:
   name: Bankowa
