--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -4,10 +4,10 @@ one:
   date: 2012-03-24
   name: EntryOne
   document_number: MyString
-  journal: one
+  journal: finance_2012
 
 two:
   date: 2012-03-24
   name: EntryTwo
   document_number: MyString
-  journal: one
+  journal: finance_2012
