Poprawka liczenia sum dla kategorii i sum wszystkich wydatków
Teraz sumy liczą się w modelu, a nie na stronie, więc suma wyświetla się zawsze cała według stanu w bazie, nawet jeśli na stronie wyświetlałaby się tylko część wpisów.

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -11,3 +11,13 @@ two:
   amount_one_percent: 9.99
   entry: one
   category: two
+
+three:
+  amount: 120
+  entry: two
+  category: five
+
+four:
+  amount: 123.56
+  entry: two
+  category: six
