--- a/test/fixtures/entries.yml
+++ b/test/fixtures/entries.yml
@@ -13,3 +13,10 @@ expense_two:
   document_number: MyString
   journal: finance_2012
   is_expense: true
+
+expense_three:
+  date: 2012-03-24
+  name: EntryThree
+  document_number: MyString
+  journal: finance_2011
+  is_expense: true
