--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -5,20 +5,24 @@ finance_2011:
   journal_type: finance
   is_open: true
   initial_balance: 200
+  unit: one
 
 finance_2012:
   year: 2012
   journal_type: finance
   is_open: true
   initial_balance: 100
+  unit: one
 
 bank_2012:
   year: 2012
   journal_type: bank
   is_open: true
+  unit: one
 
 finance_2015:
   year: 2015
   journal_type: finance
   is_open: true
   initial_balance: 0
+  unit: one
