--- a/test/fixtures/units.yml
+++ b/test/fixtures/units.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
+  name: Unit One
 
 two:
-  name: MyString
+  name: Unit Two
