--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -15,3 +15,4 @@ user1:
   #email: andrzej.stencel+user-at-ziher.c64@gmail.com
   confirmed_at: 2012-03-24 22:37:00
   confirmation_sent_at: 2012-03-24 22:36:09
+  units: [one]
