--- a/config/database.yml
+++ b/config/database.yml
@@ -61,8 +61,8 @@ test:
   database: ziher_test
   pool: 5
   host: localhost
-  username: ziher
-  password: ziher
+  username: postgres
+  password: postgres
   min_messages: warning
 
 production:
