Użytkownik nie może oglądać książek jednostek, do których nie ma uprawnień.

--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -26,3 +26,10 @@ finance_2015:
   is_open: true
   initial_balance: 0
   unit: one
+
+two2012f:
+  year: 2012
+  journal_type: finance
+  is_open: true
+  initial_balance: 0
+  unit: two
