--- a/test/fixtures/units.yml
+++ b/test/fixtures/units.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  name: Unit One
+dukt:
+  name: 9 ZDH Dukt-Zawisza
 
-two:
-  name: Unit Two
+pajaki:
+  name: 31 DH Pajaki
