--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
 admin:
   email: andrzej.stencel+ziher2-c64@gmail.com
   encrypted_password: $2a$10$nqte3zSljboVWtQOmtLmWexZIyG2oRQTbmZJzFhm/UNecrJ5p5J3m
@@ -12,6 +6,31 @@ admin:
   is_superadmin: true
 
 scoutmaster_dukt:
-  #email: andrzej.stencel+user-at-ziher.c64@gmail.com
+  email: andrzej.stencel+user-at-ziher.c64@gmail.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+  
+master_zg_m:
+  email: master_zg_m@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
+master_p_f:
+  email: master_p_f@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
+master_p_m:
+  email: master_p_m@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
+master_p:
+  email: master_p@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
+treasurer_p:
+  email: treasurer_p@zhr.com
   confirmed_at: 2012-03-24 22:37:00
   confirmation_sent_at: 2012-03-24 22:36:09
