Domyślnie koloruj output z Gita

--- a/tools/vagrant/Vagrantfile
+++ b/tools/vagrant/Vagrantfile
@@ -42,6 +42,7 @@ service postgresql restart
 
 echo ====================== Sciagam kod zrodlowy ZiHeR-a
 sudo -H -u vagrant -i git clone https://github.com/zhr/ziher.git
+sudo -H -u vagrant -i bash -c "git config --global color.ui true"
 #sudo -H -u vagrant -i bash -c "cd /home/vagrant/ziher; git checkout 1e00c66a45b723d"
 
 echo ====================== Sciagam gemy i uzupelniam baze danych
