--- a/test/fixtures/inventory_entries.yml
+++ b/test/fixtures/inventory_entries.yml
@@ -5,7 +5,7 @@ one:
   name: MyString
   document_number: MyString
   amount: 1
-  unit_price: 9.99
+  total_value: 9.99
   source: MyString
   stock_number: MyString
 
@@ -14,6 +14,6 @@ two:
   name: MyString
   document_number: MyString
   amount: 1
-  unit_price: 9.99
+  total_value: 9.99
   source: MyString
   stock_number: MyString
