Dodanie 'bundle exec' przed poleceniem 'rake db:migrate' w pliku dla Travisa, zgodnie z sugestią w błędzie pokazywanym przez Travisa:
Gem::LoadError: You have already activated rake 10.2.2, but your Gemfile requires rake 10.3.1. Prepending `bundle exec` to your command may solve this.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
  - gem update --system
  - gem --version
  - psql -c 'create database ziher_test;' -U postgres
- - rake db:migrate
+ - bundle exec rake db:migrate
 
