--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,11 +5,16 @@ admin:
   confirmation_sent_at: 2012-03-24 22:36:09
   is_superadmin: true
 
-scoutmaster_dukt:
+master_1zgm:
   email: andrzej.stencel+user-at-ziher.c64@gmail.com
   confirmed_at: 2012-03-24 22:37:00
   confirmation_sent_at: 2012-03-24 22:36:09
-  
+
+master_2zgm:
+  email: master_2zgm@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
 master_zg_m:
   email: master_zg_m@zhr.com
   confirmed_at: 2012-03-24 22:37:00
