--- a/test/fixtures/user_group_associations.yml
+++ b/test/fixtures/user_group_associations.yml
@@ -3,6 +3,11 @@ master_zg_m_district_zg_m:
   group: district_zg_m
   can_view_entries: true
 
+master_zg_district_zg:
+  user: master_zg
+  group: district_zg
+  can_view_entries: true
+
 master_p_region_p:
   user: master_p
   group: region_p
