--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,6 +20,11 @@ master_zg_m:
   confirmed_at: 2012-03-24 22:37:00
   confirmation_sent_at: 2012-03-24 22:36:09
 
+master_zg:
+  email: master_zg@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
 master_p_f:
   email: master_p_f@zhr.com
   confirmed_at: 2012-03-24 22:37:00
