Uzytkownik przypisany do grupy w której są jednostki powinien widzieć tylko te jednostki do których ma prawa

--- a/test/fixtures/user_group_associations.yml
+++ b/test/fixtures/user_group_associations.yml
@@ -8,6 +8,10 @@ master_zg_district_zg:
   group: district_zg
   can_view_entries: true
 
+user_zg_district_zg:
+  user: user_zg
+  group: district_zg
+
 master_p_region_p:
   user: master_p
   group: region_p
