--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,6 +25,11 @@ master_zg:
   confirmed_at: 2012-03-24 22:37:00
   confirmation_sent_at: 2012-03-24 22:36:09
 
+treasurer_zg:
+  email: treasurer_zg@zhr.com
+  confirmed_at: 2012-03-24 22:37:00
+  confirmation_sent_at: 2012-03-24 22:36:09
+
 user_zg:
   email: user_zg@zhr.com
   confirmed_at: 2012-03-24 22:37:00
