--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,12 @@ db:
 
 ziher:
   build: .
-  command: bundle exec rails s -p 3000 -b '0.0.0.0'
-  volumes:
-    - .:/ziher
+  command: passenger start -p 3000 -a 0.0.0.0
 
 ziher-production:
   extends: ziher
   ports:
-    - "3001:3000"
+    - "3000:3000"
   environment:
     - RAILS_ENV=production
     - ZIHER_DB_NAME=my_db_name
