Dodanie skryptu budującego: ustawi wersję oraz zbuduje i otaguje obraz o nazwie ziher-app

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,15 @@
 bootstrap-vagrant.sh
 docker-compose.yml
 Dockerfile
+docker/
 .dockerignore
 .git
 .gitignore
+.idea
 import-database.sh
 *.dump
 .travis.yml
 .vagrant
 Vagrantfile
+build.sh
+update-version.sh
