Pobieraj hosta bazy danych ze zmiennych środowiskowych

--- a/config/database.yml
+++ b/config/database.yml
@@ -70,6 +70,6 @@ production:
   encoding: unicode
   database: <%= ENV['ZIHER_DB_NAME'] %>
   pool: 5
-  host: db
+  host: <%= ENV['ZIHER_DB_HOST'] %>
   username: <%= ENV['ZIHER_DB_USERNAME'] %>
   password: <%= ENV['ZIHER_DB_PASSWORD'] %>
