--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "3000:3000"
     environment:
       - RAILS_ENV=production
+      - ZIHER_DB_HOST=db
       - ZIHER_DB_NAME=my_db_name
       - ZIHER_DB_USERNAME=my_db_username
       - ZIHER_DB_PASSWORD=my_db_password
