Zezwól na usuwanie nieużywanych kategorii

--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -69,3 +69,8 @@ ten:
   name: CategoryTen
   is_expense: false
   year: 2012
+
+not_used:
+  name: NotUsedCategory
+  is_expense: false
+  year: 2012
