--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,9 +19,9 @@ services:
     environment:
       - RAILS_ENV=production
       - ZIHER_DB_HOST=postgres
-      - ZIHER_DB_NAME=my_db_name
-      - ZIHER_DB_USERNAME=my_db_username
-      - ZIHER_DB_PASSWORD=my_db_password
+      - ZIHER_DB_NAME=ziher_development
+      - ZIHER_DB_USERNAME=ziher
+      - ZIHER_DB_PASSWORD=ziher
       - SECRET_KEY_BASE=99999999999999998888888877777776666665555544443332211aafb49eb0b8f5b780806cee250dc486ca8e4dde901fd8a96543471d8d2e7f6afcb303e1ed4e
     links:
       - postgres
