--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
 before_script:
  - gem update --system
  - gem --version
+ - gem install bundler:1.17.3
  - psql -c 'create database ziher_test;' -U postgres
  - bundle exec rake db:migrate
 
