--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ capybara-*.html
 /tmp/*
 /db/*.sqlite3
 /public/system/*
+/public/dev/
 /coverage/
 /spec/tmp/*
 **.orig
@@ -20,3 +21,4 @@ ziher.iml
 postgres*dump
 *.swp
 ubuntu-bionic-18.04-cloudimg-console.log
+passenger.*
