fix: YAML syntax error occurred while parsing database.yml - zmienne środowiskowe z informacjami o dostępie do bazy danych muszą być w cudzysłowie, jeżeli np. hasło zaczyna się od niestandardowych znaków jak "|".
Błąd jaki dostaję od Railsów to:
YAML syntax error occurred while parsing /ziher/config/database.yml. Please note that YAML must be consistently indented using spaces. Tabs are not allowed.

Plik YAML jest poprawny, problemem jest hasło które zaczyna się od znaku | - dodanie cudzysłowów rozwiązuje problem.

--- a/config/database.yml
+++ b/config/database.yml
@@ -68,8 +68,8 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: <%= ENV['ZIHER_DB_NAME'] %>
+  database: "<%= ENV['ZIHER_DB_NAME'] %>"
   pool: 5
-  host: <%= ENV['ZIHER_DB_HOST'] %>
-  username: <%= ENV['ZIHER_DB_USERNAME'] %>
-  password: <%= ENV['ZIHER_DB_PASSWORD'] %>
+  host: "<%= ENV['ZIHER_DB_HOST'] %>"
+  username: "<%= ENV['ZIHER_DB_USERNAME'] %>"
+  password: "<%= ENV['ZIHER_DB_PASSWORD'] %>"
