--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 name: ziher
 
+volumes:
+  postgres:
+
 services:
   postgres:
     container_name: postgres
@@ -9,7 +12,7 @@ services:
       - "5432:5432"
     volumes:
      - ../:/ziher/
-     - /var/lib/postgresql/data
+     - postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
